objects/Campaign_Member_CSV_File_Temp__c.object
<CustomObject>
    <label>Campaign Member CSV File Temp</label>
    <nameField>
        <label>Campaign Member CSV File Temp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Members CSV Files Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Members CSV Files Temp</relationshipLabel>
        <relationshipName>Campaign_Members_CSV_Files_Temp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>Client Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipName>CSV_Files_Temp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContentDocumentId__c</fullName>
        <label>ContentDocumentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>